<resources>
    <string name="app_name">MusicLibrary</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="label_btn_login">Login</string>
    <string name="label_btn_signup">Signup</string>
    <string name="hint_house_name">House Name</string>
    <string name="hint_street_name">Street Name</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_country">Country</string>
    <string name="label_bnv_songs">Songs</string>
    <string name="label_bnv_playlists">Playlists</string>
</resources>