<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.SignUpFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_house_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_house_name"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_street_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_street_name"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_state_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_state"
            android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_country"
            android:layout_marginTop="8dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/label_btn_signup"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>